# Hippobot

./: README.md
Color_detector/color_detector/: CMakeLists.txt  package.xml
Color_detector/color_detector/scripts/: detector.py  detector.py.autosave  detector2.py  detector2.py.autosave  final0.py  final1.py
Hippobot_mapping/mapping/: CMakeLists.txt  package.xml
Hippobot_mapping/mapping/src/: cloud_reader.cpp
